--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <title>Vishwas Navada K</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
-
+    <div class="container-fluid">
+        <div class="row" style="height:100%;">
+            <div class="col-sm-12" style="vertical-align:middle;">
+                <h1>i am busy working on something awesome! <br/>visit me at <a href="http://webception.in/vishwasnavadak/">http://webception.in/vishwasnavadak/</a></h1>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
