--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     </head>
     <body>
     <div class="container-fluid">
-        <div class="row" style="height:100%;">
-            <div class="col-sm-12" style="vertical-align:middle;">
-                <h1>i am busy working on something awesome! <br/>visit me at <a href="http://webception.in/vishwasnavadak/">http://webception.in/vishwasnavadak/</a></h1>
+        <div class="row vertical-center-row" >
+            <div class="col-sm-12 text-center" >
+                <h1><strong>i am busy working on something awesome! </strong></h1>
+                    <h3><br/>visit me at <a href="http://webception.in/vishwasnavadak/">webception.in/vishwasnavadak</a></h3>
             </div>
         </div>
     </div>
