--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="style.css" >
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
@@ -14,7 +14,7 @@
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center" >
                 <h1><strong>i am busy working on something awesome! </strong></h1>
-                    <h3><br/>visit me at <a href="http://webception.in/vishwasnavadak/">webception.in/vishwasnavadak</a></h3>
+                    <h3><br/>visit me <a href="http://webception.in/vishwasnavadak/">here</a></h3>
             </div>
         </div>
     </div>
