--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container-fluid">
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center" >
-                <h1><strong>i am busy working on something awesome! </strong></h1>
-                    <h3><br/>visit me <a href="http://webception.in/vishwasnavadak/">here</a></h3>
+                <h1><strong>i'm busy working on something awesome! </strong></h1>
+                    <h3><br/>visit me <a href="http://webception.in/vishwasnavadak/">here<span class="fa fa-external-link"></span></a></h3>
             </div>
         </div>
     </div>
