--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center" >
                 <h1><strong>i'm busy working on something awesome! </strong></h1>
-                    <h3><br/>visit me <a href="http://webception.in/vishwasnavadak/">here <span class="fa fa-external-link"></span></a></h3>
+                    <h3><br/><a href="http://webception.in/vishwasnavadak/"> visit me here <span class="fa fa-external-link"></span></a></h3>
+                        <div class="col-sm-12">
+                            <h3>
+                            <a href="https://www.facebook.com/anon.kvn" target="_blank" title="Facebook"><span class="fa fa-facebook-official"></span></a>
+                            <a href="https://twitter.com/beingkvn" target="_blank" title="Twitter"><span class="fa fa-twitter-square"></span></a>
+                            <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square"></span></a>
+                            <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square"></span></a>
+                            <a href="https://www.instagram.com/beingkvn/" target="_blank" title="Instagram"><span class="fa fa-instagram"></span></a>
+                            <a href="http://blog.webception.in/" target="_blank" title="Blog"><span class="fa fa-rss-square"></span></a>
+
+                        </h3>
+                        </div>
             </div>
         </div>
     </div>
