--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <body>
     <div class="container-fluid">
         <div class="row vertical-center-row" >
-            <div class="col-sm-12 text-center" >
+            <div class="col-sm-12 text-center middle-align" >
                 <h1><strong>i'm busy working on something awesome! </strong></h1>
                     <h3><br/><a href="http://webception.in/vishwasnavadak/"> visit me here <span class="fa fa-external-link"></span></a></h3>
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 middle-align">
                             <h3>
                             <a href="https://www.facebook.com/anon.kvn" target="_blank" title="Facebook"><span class="fa fa-facebook-official"></span></a>
                             <a href="https://twitter.com/beingkvn" target="_blank" title="Twitter"><span class="fa fa-twitter-square"></span></a>
