Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Vishwas Navada K</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" itemprop="description" content="Portfolio page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
+        <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer,chandrashekar navada, vishwas website,"/>
         <link rel="stylesheet" href="style.css" >
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
