--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Vishwas Navada K</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" itemprop="description" content="Portfolio page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
-        <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer,chandrashekar navada, vishwas website,"/>
-        <link rel="stylesheet" href="style.css" >
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    </head>
-    <body>
+<head>
+    <title>Vishwas Navada K</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" itemprop="description" content="Github page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
+    <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer,chandrashekar navada, vishwas github webpage,"/>
+    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-51455888-6', 'auto');
+    ga('send', 'pageview');
+
+    </script>
+</head>
+<body>
     <div class="container-fluid">
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
                 <h1><strong>i'm busy working on something awesome! </strong></h1>
-                    <h3><br/><a href="http://webception.in/vishwasnavadak/"> visit me here <span class="fa fa-external-link"></span></a></h3>
-                        <div class="col-sm-12 ">
-                            <h3>
-                            <a href="https://www.facebook.com/anon.kvn" target="_blank" title="Facebook"><span class="fa fa-facebook-official"></span></a>
-                            <a href="https://twitter.com/beingkvn" target="_blank" title="Twitter"><span class="fa fa-twitter-square"></span></a>
-                            <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square"></span></a>
-                            <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square"></span></a>
-                            <a href="https://www.instagram.com/beingkvn/" target="_blank" title="Instagram"><span class="fa fa-instagram"></span></a>
-                            <a href="http://blog.webception.in/" target="_blank" title="Blog"><span class="fa fa-rss-square"></span></a>
+                <h3><br/><a href="http://webception.in/vishwasnavadak/"> visit me here <span class="fa fa-external-link"></span></a></h3>
+                <div class="col-sm-12 ">
+                    <h3>
+                        <a href="https://www.facebook.com/anon.kvn" target="_blank" title="Facebook"><span class="fa fa-facebook-official"></span></a>
+                        <a href="https://twitter.com/beingkvn" target="_blank" title="Twitter"><span class="fa fa-twitter-square"></span></a>
+                        <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square"></span></a>
+                        <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square"></span></a>
+                        <a href="https://www.instagram.com/beingkvn/" target="_blank" title="Instagram"><span class="fa fa-instagram"></span></a>
+                        <a href="http://blog.webception.in/" target="_blank" title="Blog"><span class="fa fa-rss-square"></span></a>
 
-                        </h3>
-                        </div>
+                    </h3>
+                </div>
             </div>
         </div>
     </div>
-    </body>
+</body>
 </html>
