--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
                 <h1><strong> Vishwas Navada K <span class="blinking-cursor">|</span></strong></h1>
-                <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download> Check my resume <span class="fa fa-download"></span></a></h3>
+                <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download> Check my resume</a><br/>or<br/>socialize me</h3>
                 <div class="col-sm-12 ">
                     <h3>
                         <a href="https://www.facebook.com/beingkvn" target="_blank" title="Facebook"><span class="fa fa-facebook-official"></span></a>
