Update social links

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download> Check my resume</a><br/>or<br/>socialize me</h3>
                 <div class="col-sm-12 ">
                     <h3>
-                        <a href="https://www.facebook.com/beingkvn" target="_blank" title="Facebook"><span class="fa fa-facebook-official fa-2x"></span></a>
-                        <a href="https://twitter.com/beingkvn" target="_blank" title="Twitter"><span class="fa fa-twitter-square fa-2x"></span></a>
+                        <a href="https://www.facebook.com/vishwasnavadak" target="_blank" title="Facebook"><span class="fa fa-facebook-official fa-2x"></span></a>
+                        <a href="https://twitter.com/vishwasnavadak" target="_blank" title="Twitter"><span class="fa fa-twitter-square fa-2x"></span></a>
                         <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square fa-2x"></span></a>
                         <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square fa-2x"></span></a>
-                        <a href="https://www.instagram.com/beingkvn/" target="_blank" title="Instagram"><span class="fa fa-instagram fa-2x"></span></a>
+                        <a href="https://www.instagram.com/vishwasnavadak/" target="_blank" title="Instagram"><span class="fa fa-instagram fa-2x"></span></a>
                         <a href="http://blog.webception.in/" target="_blank" title="Blog"><span class="fa fa-rss-square fa-2x"></span></a>
 
                     </h3>
