--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
                 <h1><strong> Vishwas Navada K <span class="blinking-cursor">|</span></strong></h1>
-                <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download> Check my resume</a><br/>or<br/>socialize me</h3>
+                <p>Hi, I am an IT Professional currently working in Infosys Ltd. I have my intretest in Programming, Data Visualization and UI. I love to take pictures in free time. Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
+                <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download>Resume</a></h3>
                 <div class="col-sm-12 ">
                     <h3>
                         <a href="https://www.facebook.com/vishwasnavadak" target="_blank" title="Facebook"><span class="fa fa-facebook-official fa-2x"></span></a>
