--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
                 <h1><strong> Vishwas Navada K <span class="blinking-cursor">|</span></strong></h1>
-                <p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my intretest in Programming, Data Visualization and UI Development. I love to take pictures in free time. <br/>Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
+                <p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. <br/>Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
                 <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download>Resume</a></h3>
                 <div class="col-sm-12 ">
                     <h3>
