--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
                 <h1><strong> Vishwas Navada K <span class="blinking-cursor">|</span></strong></h1>
                 <p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. <br/>Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
-                <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak.pdf" download>Resume</a></h3>
+                <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak_resume.pdf" download>Resume</a></h3>
                 <div class="col-sm-12 ">
                     <h3>
                         <a href="https://www.facebook.com/vishwasnavadak" target="_blank" title="Facebook"><span class="fa fa-facebook-official fa-2x"></span></a>
@@ -36,6 +36,7 @@
                         <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square fa-2x"></span></a>
                         <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square fa-2x"></span></a>
                         <a href="https://www.instagram.com/vishwasnavadak/" target="_blank" title="Instagram"><span class="fa fa-instagram fa-2x"></span></a>
+                        <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github"><span class="fa fa-github fa-2x"></span></a>
                         <a href="http://blog.webception.in/" target="_blank" title="Blog"><span class="fa fa-rss-square fa-2x"></span></a>
 
                     </h3>
