--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square fa-2x"></span></a>
                         <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square fa-2x"></span></a>
                         <a href="https://www.instagram.com/vishwasnavadak/" target="_blank" title="Instagram"><span class="fa fa-instagram fa-2x"></span></a>
-                        <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github"><span class="fa fa-github fa-2x"></span></a>
+                        <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github"><span class="fa fa-github-square fa-2x"></span></a>
                         <a href="http://blog.webception.in/" target="_blank" title="Blog"><span class="fa fa-rss-square fa-2x"></span></a>
 
                     </h3>
