Some more bragging
Added Skills and Detailed Descriptions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" itemprop="description" content="Github page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
-    <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer,chandrashekar navada, vishwas github webpage,"/>
+    <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer, vishwas github webpage,"/>
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -26,8 +26,114 @@
     <div class="container-fluid">
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
-                <h1><strong> Vishwas Navada K <span class="blinking-cursor">|</span></strong></h1>
-                <p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. <br/>Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
+                <h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
+                <div class="row">
+				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. </p>
+				</div>
+				<h3 class="text-center"><u>Skills</u></h3>
+				<div class="row skill-row">
+					<div class="col-sm-4 skill-col">
+					<h5>HTML/CSS</h5>
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+						</div>
+					<p class="skill-content">
+					<a href="http://webception.in" target="_blank"><span class="skill-desc">Customized HTML/CSS templates for WordPress and Blogger,</span></a>
+					<span class="skill-desc">Developed Responsive UI for Web Applications with Twitter Bootstrap,</span><br/>
+					<a href="http://webception.in/a/projects" target="_blank"><span class="skill-desc">Designed and Developed websites for local businesses and college fests</span></a>
+					</p>
+					</div>
+					<div class="col-sm-4 skill-col">
+					<h5>JavaScript/JQuery</h5>
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Wrote client side validations for HTML forms,</span>
+					<span class="skill-desc">Developed simple asynchronous applications using AJAX</span>
+					</p>
+					</div>
+					<h5>AngularJS</h5>
+					<div class="col-sm-4 skill-col">
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Built a single page light weight billing web application for local client to centralize monitoring of sales. </span>
+					</p>
+					</div>
+				</div>
+				<div class="row skill-row">
+					<div class="col-sm-4 skill-col">
+					<h5>PHP</h5>
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Used PHP to handle server side processing and DB Operations,</span>
+					<a href="http://demo.webception.in/vishwas/twitter/" target="_blank"><span class="skill-desc">Built a tool that does sentiment analysis on Twitter Tweets using PHP open source libraries,</span></a>
+					<span class="skill-desc">Customized WordPress Theme and Plug-in Functionalities</span>
+					</p>	
+					</div>
+					<div class="col-sm-4 skill-col">
+					<h5>SEO/SMO</h5>
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Active Contributor for Google Maps (Local Guides),</span>
+					<a href="http://webception.in" target="_blank"><span class="skill-desc">Helped Local Businesses by giving them a online presence using Google My Business,</span></a>
+					<a href="http://webception.in" target="_blank"><span class="skill-desc">Ran paid Google AdWords/Social Media Ad campaign to increase client sales and website conversions</span></a>
+					</p>
+					</div>
+					<h5>SQL (MYSQL,MSSQL)</h5>
+					<div class="col-sm-4 skill-col">
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Created Data Model for small web applications,</span>
+					<span class="skill-desc">Wrote complex SQL queries for fetching data from multiple tables to present it in Jasper Reports,</span>
+					<span class="skill-desc">Wrote simple Stored Procedures in SQL Server 2008</span>
+					</p>
+					</div>
+				</div>
+				<div class="row skill-row">
+					<div class="col-sm-4 skill-col">
+					<h5>Python</h5>
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Wrote object oriented console based application in python called pyWallet as part of the Infosys Training Curriculum to simulate a payment wallet</span>
+					</p>
+					</div>
+					<div class="col-sm-4 skill-col">
+					<h5>GoLang</h5>
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+						</div>
+					<p class="skill-content">
+					<a href="http://nosconf.github.io/" target="_blank"><span class="skill-desc">Gave a presentation on benefits of Go in NOS Conf 2016,</span><a/>
+					<a href="https://github.com/GOOFS/go-goof-Talk" target="_blank"><span class="skill-desc">Built console based Chat Application called GoofTalk,</span></a>
+					<span class="skill-desc">Tried to contribute to open source applications written in Go i.e. Minio.io, GlusterFS</span>
+					</p>
+					</div>
+					<h5>Graphic Design</h5>
+					<div class="col-sm-4 skill-col">
+					<div class="progress">
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+						</div>
+					<p class="skill-content">
+					<span class="skill-desc">Designed Logos, Web Ad Banners, Brochures and Business Cards in Adobe Photoshop,</span>
+					</p>
+					</div>
+				</div>
+				
+				<div class="row">
+				<p class="body-content"><br/>Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
+				</div>
+				
                 <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak_resume.pdf" download>Resume</a></h3>
                 <div class="col-sm-12 ">
                     <h3>
