--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <title>Vishwas Navada K</title>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" itemprop="description" content="Github page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
+    <meta name="theme-color" content="#34353c" />
+	<meta name="description" itemprop="description" content="Github page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
     <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer, vishwas github webpage,"/>
-    <link rel="stylesheet" href="style.css" >
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -25,7 +28,8 @@
 <body>
     <div class="container-fluid">
         <div class="row vertical-center-row" >
-            <div class="col-sm-12 text-center " ><br/><br/><br/><br/>
+            <div class="col-sm-12 text-center " ><br/><br/>
+				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;"><br/>
                 <h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
                 <div class="row">
 				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. </p>
@@ -131,7 +135,7 @@
 				</div>
 				
 				<div class="row">
-				<p class="body-content"><br/>Check out my resume below or if you'd like to get in touch, feel free to say hello through any of the social links below. </p>
+				<p class="body-content"><br/>If you'd like to get in touch, feel free to say hello through any of the social links below. </p>
 				</div>
 				
                 <h3><br/><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak_resume.pdf" download>Resume</a></h3>
