--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/>
-				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;"><br/>
+				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;">
                 <h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
                 <div class="row">
 				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. </p>
