update index.html for more content

--- a/index.html
+++ b/index.html
@@ -135,7 +135,22 @@
 					</div>
 				</div>
 				<div class="row skill-row">
-					<div class="col-sm-12 skill-col">
+					<div class="col-sm-6 skill-col">
+						<h5>Tools and Platforms</h5>
+						<p class="skill-content">
+							<span class="skill-desc">Windows,</span>
+							<span class="skill-desc">Linux distros like Ubuntu, Fedora and Backtrack</span>
+							<span class="skill-desc">Git,</span>
+							<span class="skill-desc">Visual Studio,</span>
+							<span class="skill-desc">Eclipse,</span>
+							<span class="skill-desc">Google Analytics,</span>
+							<span class="skill-desc">MS Office (Word, Excel, Powerpoint),</span>
+							<span class="skill-desc">Stackoverflow,</span>
+							<span class="skill-desc">WordPress,</span>
+							<span class="skill-desc">cPanel</span>
+						</p>
+					</div>
+					<div class="col-sm-6 skill-col">
 						<h5>Other Skills and Interests</h5>
 						<p class="skill-content">
 							<span class="skill-desc">Photography,</span>
