--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<h5>Tools and Platforms</h5>
 						<p class="skill-content">
 							<span class="skill-desc">Windows,</span>
-							<span class="skill-desc">Linux distros like Ubuntu, Fedora and Backtrack</span>
+							<span class="skill-desc">Linux distros like Ubuntu, Fedora and Backtrack,</span>
 							<span class="skill-desc">Git,</span>
 							<span class="skill-desc">Visual Studio,</span>
 							<span class="skill-desc">Eclipse,</span>
