--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
 							<span class="skill-desc">Windows,</span>
 							<span class="skill-desc">Linux distros like Ubuntu, Fedora and Backtrack,</span>
 							<span class="skill-desc">Git,</span>
+							<span class="skill-desc">Slack,</span>
+							<span class="skill-desc">Trello,</span>
 							<span class="skill-desc">Visual Studio,</span>
 							<span class="skill-desc">Eclipse,</span>
 							<span class="skill-desc">Google Analytics,</span>
