changed skill progress bar style

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<div class="col-sm-4 skill-col">
 					<h5>HTML/CSS</h5>
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<a href="http://webception.in" target="_blank"><span class="skill-desc">Customized HTML/CSS templates for WordPress and Blogger,</span></a>
@@ -51,7 +51,7 @@
 					<div class="col-sm-4 skill-col">
 					<h5>JavaScript/JQuery</h5>
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Wrote client side validations for HTML forms,</span>
@@ -61,7 +61,7 @@
 					<h5>AngularJS</h5>
 					<div class="col-sm-4 skill-col">
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Built a single page light weight billing web application for local client to centralize monitoring of sales. </span>
@@ -72,7 +72,7 @@
 					<div class="col-sm-4 skill-col">
 					<h5>PHP</h5>
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Used PHP to handle server side processing and DB Operations,</span>
@@ -83,7 +83,7 @@
 					<div class="col-sm-4 skill-col">
 					<h5>SEO/SMO</h5>
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Active Contributor for Google Maps (Local Guides),</span>
@@ -94,7 +94,7 @@
 					<h5>SQL (MYSQL,MSSQL)</h5>
 					<div class="col-sm-4 skill-col">
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Created Data Model for small web applications,</span>
@@ -107,7 +107,7 @@
 					<div class="col-sm-4 skill-col">
 					<h5>Python</h5>
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Wrote object oriented console based application in python called pyWallet as part of the Infosys Training Curriculum to simulate a payment wallet</span>
@@ -116,7 +116,7 @@
 					<div class="col-sm-4 skill-col">
 					<h5>GoLang</h5>
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<a href="http://nosconf.github.io/" target="_blank"><span class="skill-desc">Gave a presentation on benefits of Go in NOS Conf 2016,</span><a/>
@@ -127,7 +127,7 @@
 					<h5>Graphic Design</h5>
 					<div class="col-sm-4 skill-col">
 					<div class="progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Designed Logos, Web Ad Banners, Brochures and Business Cards in Adobe Photoshop,</span>
