--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="row skill-row">
 					<div class="col-sm-4 skill-col">
 					<h5>HTML/CSS</h5>
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -50,7 +50,7 @@
 					</div>
 					<div class="col-sm-4 skill-col">
 					<h5>JavaScript/JQuery</h5>
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -60,7 +60,7 @@
 					</div>
 					<h5>AngularJS</h5>
 					<div class="col-sm-4 skill-col">
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -71,7 +71,7 @@
 				<div class="row skill-row">
 					<div class="col-sm-4 skill-col">
 					<h5>PHP</h5>
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -82,7 +82,7 @@
 					</div>
 					<div class="col-sm-4 skill-col">
 					<h5>SEO/SMO</h5>
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -93,7 +93,7 @@
 					</div>
 					<h5>SQL (MYSQL,MSSQL)</h5>
 					<div class="col-sm-4 skill-col">
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -106,7 +106,7 @@
 				<div class="row skill-row">
 					<div class="col-sm-4 skill-col">
 					<h5>Python</h5>
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -115,7 +115,7 @@
 					</div>
 					<div class="col-sm-4 skill-col">
 					<h5>GoLang</h5>
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -126,7 +126,7 @@
 					</div>
 					<h5>Graphic Design</h5>
 					<div class="col-sm-4 skill-col">
-					<div class="progress">
+					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
@@ -174,12 +174,12 @@
 				<div class="col-sm-12 ">
 				<p class="body-content"><br/>If you'd like to get in touch, feel free to say hello through any of the social links below. </p>
                     <h3>
-                        <a href="https://www.facebook.com/vishwasnavadak" target="_blank" title="Facebook"><span class="fa fa-facebook-official fa-2x"></span></a>
-                        <a href="https://twitter.com/vishwasnavadak" target="_blank" title="Twitter"><span class="fa fa-twitter-square fa-2x"></span></a>
-                        <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus"><span class="fa fa-google-plus-square fa-2x"></span></a>
-                        <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn"><span class="fa fa-linkedin-square fa-2x"></span></a>
-                        <a href="https://www.instagram.com/vishwasnavadak/" target="_blank" title="Instagram"><span class="fa fa-instagram fa-2x"></span></a>
-                        <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github"><span class="fa fa-github-square fa-2x"></span></a>
+                        <a href="https://www.facebook.com/vishwasnavadak" target="_blank" title="Facebook" aria-label="Facebook Profile"><span class="fa fa-facebook-official fa-2x"></span></a>
+                        <a href="https://twitter.com/vishwasnavadak" target="_blank" title="Twitter" aria-label="Twitter Profile"><span class="fa fa-twitter-square fa-2x"></span></a>
+                        <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus" aria-label="Google Plus Profile"><span class="fa fa-google-plus-square fa-2x"></span></a>
+                        <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn" aria-label="Linkedin Profile"><span class="fa fa-linkedin-square fa-2x"></span></a>
+                        <a href="https://www.instagram.com/vishwasnavadak/" target="_blank" title="Instagram" aria-label="Instagram Profile"><span class="fa fa-instagram fa-2x"></span></a>
+                        <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github" aria-label="Github Profile"><span class="fa fa-github-square fa-2x"></span></a>
                         
                     </h3>
                 </div>
