added navbar, change background colors and media rules

--- a/index.html
+++ b/index.html
@@ -6,31 +6,47 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#34353c" />
-	<meta name="description" itemprop="description" content="Github page of Vishwas Navada K, Founder of Webception IT Solutions, A Web Design and Development Startup company"/>
-    <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, beingkvn, personal portfolio, web designer, udupi, saligrama, Freelance developer, vishwas github webpage,"/>
+	<meta name="description" itemprop="description" content="Portfolio and Blog of Vishwas Navada K"/>
+    <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, vishwasnavadak, personal portfolio, web designer, udupi, saligrama, Freelance developer, vishwas github webpage,"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css" >
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-51455888-6', 'auto');
-    ga('send', 'pageview');
-
-    </script>
+	<link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/vendor/font-awesome/css/font-awesome.min.css">
 </head>
+
 <body>
-    <div class="container-fluid">
+	<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+		<div class="container">
+		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			Menu
+			<i class="fa fa-bars"></i>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+			  <li class="nav-item">
+				<a class="nav-link" href="http://vishwas.tech">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="http://vishwas.tech/blog/">I'm trying to write</a>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" href="https://500px.com/vishwasnavadak" target="_blank">I Take Photos</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://www.youtube.com/VishwasNavada" target="_blank">Videos? Maybe.</a>
+			</li>
+		</ul>
+			</ul>
+		  </div>
+		</div>
+	  </nav>
+<br/><br/>
+    <div class="container">
         <div class="row vertical-center-row" >
             <div class="col-sm-12 text-center " ><br/><br/>
 				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;">
-                <h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
+				<h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
                 <div class="row">
 				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. </p>
 				</div>
@@ -58,8 +74,8 @@
 					<span class="skill-desc">Developed simple asynchronous applications using AJAX</span>
 					</p>
 					</div>
-					<h5>AngularJS</h5>
 					<div class="col-sm-4 skill-col">
+					<h5>AngularJS</h5>
 					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
@@ -91,8 +107,8 @@
 					<a href="http://webception.in" target="_blank"><span class="skill-desc">Ran paid Google AdWords/Social Media Ad campaign to increase client sales and website conversions</span></a>
 					</p>
 					</div>
-					<h5>SQL (MYSQL,MSSQL)</h5>
 					<div class="col-sm-4 skill-col">
+					<h5>SQL (MYSQL,MSSQL)</h5>
 					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
@@ -124,8 +140,8 @@
 					<span class="skill-desc">Tried to contribute to open source applications written in Go i.e. Minio.io, GlusterFS</span>
 					</p>
 					</div>
-					<h5>Graphic Design</h5>
 					<div class="col-sm-4 skill-col">
+					<h5>Graphic Design</h5>
 					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
@@ -164,19 +180,10 @@
 					</div>
 				</div>
 				<hr class="separator">
-				<h3 class="text-center"><u>External Links</u></h3>
-				<div class="row skill-row">
-					<h5 class="col-sm-3"><a href="https://github.com/vishwasnavadak/vishwasnavadak.github.io/raw/master/vishwasnavadak_resume.pdf" download title="Download Resume">Download my Resume</a></h5>
-					<h5 class="col-sm-3"><a href="http://webception.in/blog/page/4" target="_blank" title="Webception Blog">Read the things I wrote</a></h5>
-					<h5 class="col-sm-3"><a href="https://500px.com/vishwasnavadak" target="_blank" title="500px Profile Link">Check the photos I clicked</a></h5>
-					<h5 class="col-sm-3"><a href="https://www.youtube.com/c/VishwasNavada" target="_blank" title="Youtube Channel">Watch my Youtube Videos</a></h5>
-				</div>
 				<div class="col-sm-12 ">
-				<p class="body-content"><br/>If you'd like to get in touch, feel free to say hello through any of the social links below. </p>
                     <h3>
                         <a href="https://www.facebook.com/vishwasnavadak" target="_blank" title="Facebook" aria-label="Facebook Profile"><span class="fa fa-facebook-official fa-2x"></span></a>
                         <a href="https://twitter.com/vishwasnavadak" target="_blank" title="Twitter" aria-label="Twitter Profile"><span class="fa fa-twitter-square fa-2x"></span></a>
-                        <a href="https://plus.google.com/+VishwasNavada" target="_blank" title="Google Plus" aria-label="Google Plus Profile"><span class="fa fa-google-plus-square fa-2x"></span></a>
                         <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn" aria-label="Linkedin Profile"><span class="fa fa-linkedin-square fa-2x"></span></a>
                         <a href="https://www.instagram.com/vishwasnavadak/" target="_blank" title="Instagram" aria-label="Instagram Profile"><span class="fa fa-instagram fa-2x"></span></a>
                         <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github" aria-label="Github Profile"><span class="fa fa-github-square fa-2x"></span></a>
@@ -188,8 +195,21 @@
         </div>
     </div>
 	<br/>
-	<div class="footer">
+	<div class="footer text-center">
 		<p> &copy; 2018 Vishwas Navada K. Built with Bootstrap. Hosted on Github.</p>
 	</div>
+	<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+			ga('create', 'UA-51455888-6', 'auto');
+			ga('send', 'pageview');
+		
+			</script>
+	<script src="assets/vendor/jquery/jquery.min.js"></script>
+	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js"></script>
 </body>
 </html>
