fixed meta desc

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#34353c" />
-	<meta name="description" itemprop="description" content="Portfolio and Blog of Vishwas Navada K"/>
+	<meta name="description" itemprop="description" content="I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time."/>
     <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, vishwasnavadak, personal portfolio, web designer, udupi, saligrama, Freelance developer, vishwas github webpage,"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css" >
