--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
-					<h5>JavaScript/JQuery</h5>
+					<h5>JavaScript/JQuery/ReactJS</h5>
 					<div class="progress skill-progress">
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
@@ -75,12 +75,13 @@
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
-					<h5>AngularJS</h5>
+					<h5>Data Visualization</h5>
 					<div class="progress skill-progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
-					<span class="skill-desc">Built a single page light weight billing web application for local client to centralize monitoring of sales. </span>
+						<a href="http://demo.webception.in/vishwas/twitter/" target="_blank"><span class="skill-desc">Worked with Google Charts API for showing the sentiment analysis results from Twitter.</span></a>
+					<span class="skill-desc">Used Highcharts API within JasperSoft Reports to create interactive charts and dashboards.</span>
 					</p>
 					</div>
 				</div>
@@ -114,7 +115,7 @@
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Created Data Model for small web applications,</span>
-					<span class="skill-desc">Wrote complex SQL queries for fetching data from multiple tables to present it in Jasper Reports,</span>
+					<span class="skill-desc">Wrote SQL queries for fetching data from multiple tables to present it in Jasper Reports,</span>
 					<span class="skill-desc">Wrote simple Stored Procedures in SQL Server 2008</span>
 					</p>
 					</div>
@@ -159,7 +160,7 @@
 							<span class="skill-desc">Git,</span>
 							<span class="skill-desc">Slack,</span>
 							<span class="skill-desc">Trello,</span>
-							<span class="skill-desc">Visual Studio,</span>
+							<span class="skill-desc">VS Code
 							<span class="skill-desc">Eclipse,</span>
 							<span class="skill-desc">Google Analytics,</span>
 							<span class="skill-desc">MS Office (Word, Excel, Powerpoint),</span>
@@ -176,6 +177,28 @@
 							<span class="skill-desc">Watching Sci-Fi and Movies and TV Shows (Especially Marvel & DC Comic Book based),</span>
 							<span class="skill-desc">Traveling,</span>
 							<span class="skill-desc">Reading Tech Blogs</span>
+						</p>
+					</div>
+				</div>
+				<hr class="separator">
+				<h3 class="text-center"><u>Random Projects</u></h3>
+				<div class="row skill-row">
+					<div class="col-sm-6 skill-col">
+						<h4><a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" title="Github Repo">Goof Talk</a></h4>
+						<p class="skill-content">
+							Terminal based chat application built using Go which enables communication between computers within the local network. 
+						</p>
+					</div>
+					<div class="col-sm-6 skill-col">
+						<h4><a href="http://demo.webception.in/vishwas/twitter/" target="_blank" title="Project Demo">Twitter Sentiment Analyzer</a></h4>
+						<p class="skill-content">
+							Web application that fetches top tweets from twitter based on the search query (hashtag/username) and categorizes them into positive, negative and neutral tweets.
+						</p>
+					</div>
+					<div class="col-sm-12 skill-col">
+						<h4 title="Sorry no link">Workshop and Conference Management System</h4>
+						<p class="skill-content">
+							A web portal connecting all the departments of the college and Accounts section in which staff enter the details of the workshop and conferences that they have conducted or attended and upload the relevant documents for efficient bookkeeping.
 						</p>
 					</div>
 				</div>
