fixed missing </span>

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<span class="skill-desc">Git,</span>
 							<span class="skill-desc">Slack,</span>
 							<span class="skill-desc">Trello,</span>
-							<span class="skill-desc">VS Code
+							<span class="skill-desc">VS Code, </span>
 							<span class="skill-desc">Eclipse,</span>
 							<span class="skill-desc">Google Analytics,</span>
 							<span class="skill-desc">MS Office (Word, Excel, Powerpoint),</span>
