--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<a class="nav-link" href="http://vishwas.tech">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="/blog/">I'm trying to write</a>
+				<a class="nav-link" href="/blog/">I'm trying to write stuff</a>
 				</li>
 				<li class="nav-item">
 				<a class="nav-link" href="/blog/photos" target="_blank">I Take Photos</a>
