fix the merge conflicts

--- a/404.html
+++ b/404.html
@@ -8,13 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>
-<<<<<<< HEAD
-    Vishwas Navada K
-=======
-    Vishwas Navada K&#39;s Blog
->>>>>>> 20e1c0b14c1d01ef64adc65435b013823cd2bdac
-  </title>
+  <title>Vishwas Navada K</title>
 
   <meta name="description" content="I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures i...">
 
